samples/_failures_safe/1761308183_8202f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77c7082b.c: In function ‘main’:
./samples/SAFE/__tmp_77c7082b.c:143:5: error: expected declaration or statement at end of input
  143 |     }
      |     ^
